# kensington

./: CMakeLists.txt  Doxyfile
.circleci/: config.yaml  config.yml
src/: CMakeLists.txt  board.cpp  board.h  edge.h  layout_config_parser.h  main.cpp  node.cpp  node.h  player.h
src/UTs/: CMakeLists.txt  board_test.cpp  edge_test.cpp  layout_config_parser_test.cpp  node_test.cpp  player_test.cpp
